Refactor GUI document listeners and introduce utility methods
- Replaced inline DocumentListener implementations in LogsGUI, NewOrderGUI, OrderGUI, VendorGUI with a utility method from JFrameUtils for cleaner code.
- Introduced createAlternatingRowRenderer method in JFrameUtils for consistent table row coloring.
- Updated Main class to use Variables for versioning and settings defaults.
- Refactored cache expiration logic in various managers (ArticleManager, ClientManager, DepartmentManager, etc.) to utilize a centralized CACHE_TTL_MILLIS from Variables.
- Added Variables class to centralize application constants and settings defaults.
- Enhanced ScanServer to load settings from a properties file and ensure the settings file is created if it doesn't exist.
- Updated settings.properties to include new properties for scan server configuration.